Issue #25: NEPT-1105: Allow to define commands in runner.yml.dist

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -4,7 +4,7 @@
 
 # Global Task Runner settings.
 runner:
-  bin-dir: "./vendor/bin"
+  bin_dir: "./vendor/bin"
 
 # Drupal-related setting values.
 # All default values below refers to Drupal 8.
@@ -75,3 +75,9 @@ github:
 
   # GitHub OAuth token.
   token: ~
+
+commands:
+  setup:behat:
+    - { task: "process", source: "behat.yml.dist", destination: "behat.yml" }
+  setup:phpunit:
+    - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
