Issue #32: Remove setup commands.

--- a/config/runner.yml
+++ b/config/runner.yml
@@ -67,8 +67,4 @@ github:
   token: ~
 
 # List of dynamically-defined commands.
-commands:
-  setup:behat:
-    - { task: "process", source: "behat.yml.dist", destination: "behat.yml" }
-  setup:phpunit:
-    - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
+commands: []
