--- a/tests/fixtures/setup.yml
+++ b/tests/fixtures/setup.yml
@@ -1,6 +1,14 @@
 - command: setup:behat
   source: behat.yml.dist
   destination: behat.yml
+  configuration:
+    drupal:
+      root: "web"
+    commands:
+      setup:behat:
+        - { task: "process", source: "behat.yml.dist", destination: "behat.yml" }
+      setup:phpunit:
+        - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
   content: >
     default:
       extensions:
@@ -19,6 +27,14 @@
 - command: setup:phpunit
   source: phpunit.xml.dist
   destination: phpunit.xml
+  configuration:
+    drupal:
+      root: "web"
+    commands:
+      setup:behat:
+        - { task: "process", source: "behat.yml.dist", destination: "behat.yml" }
+      setup:phpunit:
+        - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
   content: >
     <?xml version="1.0" encoding="UTF-8"?>
     <phpunit bootstrap="vendor/autoload.php">
