--- a/tests/fixtures/simulation.yml
+++ b/tests/fixtures/simulation.yml
@@ -179,6 +179,10 @@
         - { task: "run", command: "drupal:settings-setup" }
         - { task: "run", command: "setup:behat" }
         - { task: "run", command: "setup:phpunit" }
+      setup:behat:
+        - { task: "process", source: "behat.yml.dist", destination: "behat.yml" }
+      setup:phpunit:
+        - { task: "process", source: "phpunit.xml.dist", destination: "phpunit.xml" }
   composer: ''
   contains:
     - "{ task: chmod, file: web/sites, permissions: 509 }"
