--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -18,3 +18,6 @@ command:
         database-name: ${drupal.database.name}
         database-user: ${drupal.database.user}
         database-password: ${drupal.database.password}
+    drush-setup:
+      options:
+        config-dir: ${drupal.root}/drush
