Issue #35: Add sites subdir option.

--- a/config/commands/drupal.yml
+++ b/config/commands/drupal.yml
@@ -18,6 +18,7 @@ command:
         database-name: ${drupal.database.name}
         database-user: ${drupal.database.user}
         database-password: ${drupal.database.password}
+        sites-subdir: ${drupal.site.sites_subdir}
     drush-setup:
       options:
         config-dir: ${drupal.root}/drush
