--- a/tests/fixtures/commands/drupal-settings-setup.yml
+++ b/tests/fixtures/commands/drupal-settings-setup.yml
@@ -10,6 +10,7 @@
   expected:
     - file: "build/sites/default/default.settings.php"
       contains: "$conf[\"file_scan_ignore_directories\"] = array(0 => 'node_modules',1 => 'bower_components',2 => 'vendor',3 => 'build');"
+      not_contains: ~
 
 - configuration:
     drupal:
@@ -20,6 +21,7 @@
   expected:
     - file: "build/sites/default/default.settings.php"
       contains: "$settings[\"file_scan_ignore_directories\"] = array(0 => 'build');"
+      not_contains: ~
 
 - configuration:
     drupal:
@@ -27,5 +29,4 @@
   expected:
     - file: "build/sites/default/default.settings.php"
       contains: "// Start settings processor block."
-    - file: "build/sites/default/default.settings.php"
-      contains: "// End settings processor block."
+      not_contains: "file_scan_ignore_directories"
